--- a/Frontend/CrudJavaTienda/src/app/dashboard/dashboard.component.html
+++ b/Frontend/CrudJavaTienda/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,11 @@
       <form class="d-flex me-auto" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       </form>
-      <button class="btn btn-outline-success perfil ms-auto" type="submit">Search</button>
+      
+      <!-- Selector de Rol -->
+      <app-selector-rol class="me-3"></app-selector-rol>
+      
+      <button class="btn btn-outline-success perfil" type="submit">Search</button>
     </div>
   </div>
 </nav>
