--- a/Frontend/CrudJavaTienda/src/app/pages/CateoriaPage/componentes/categoria-tarjeta/categoria-tarjeta.component.html
+++ b/Frontend/CrudJavaTienda/src/app/pages/CateoriaPage/componentes/categoria-tarjeta/categoria-tarjeta.component.html
@@ -11,12 +11,13 @@
     <h6 class="card-subtitle text-muted">Categoría</h6>
 
     <button class="btn btn-sm btn-outline-primary mt-2" 
+    *ngIf="esAdmin" 
         data-bs-toggle="modal" 
         data-bs-target="#modalEditarCategoria"
         (click)="onEditar3()">
   Editar
 </button>
-<button class="btn btn-sm btn-danger bottonmio" (click)="eliminar()">Eliminar</button>
+<button *ngIf="esAdmin"   class="btn btn-sm btn-danger bottonmio" (click)="eliminar()">Eliminar</button>
 
   </div>
 </div>
