--- a/Frontend/CrudJavaTienda/src/app/pages/ProductosPage/componentes/tarjeta-producto/tarjeta-producto.component.html
+++ b/Frontend/CrudJavaTienda/src/app/pages/ProductosPage/componentes/tarjeta-producto/tarjeta-producto.component.html
@@ -8,11 +8,14 @@
       <p class="card-text">{{producto.productPrice}}</p>
 
       <button class="btn btn-sm btn-outline-primary mt-2"
+      *ngIf="esAdmin"
       data-bs-toggle="modal"
       data-bs-target="#modalEditarProducto"
       (click)="onEditar3()">
  Editar
-</button>
-      <button class="btn btn-sm btn-danger bottonmio" (click)="eliminar()">Eliminar</button>
+  </button>
+      <button  *ngIf="esAdmin"  class="btn btn-sm btn-danger bottonmio" (click)="eliminar()">Eliminar</button>
+    <button (click)="mostrarAlerta()" type="button" class="btn btn-sm  mt-2 btn-success bottonmio">Comprar</button>
+
     </div>
   </div>
