--- a/Frontend/CrudJavaTienda/src/app/pages/inicio/inicio.component.html
+++ b/Frontend/CrudJavaTienda/src/app/pages/inicio/inicio.component.html
@@ -2,21 +2,25 @@
   <!-- Primera fila: Cajas resumen -->
   <div class="row mb-4 primeras">
     <div class="col-md-4">
-      <div class="card text-center p-3">
+      <div class="card text-center p-3 cartica" >
         <h6 class="fw-bold">Categorías</h6>
-        <p class="fs-5">5</p>
+        <img src="assets/categoria.png" alt="" class="imagen">
+        
+       
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card text-center p-3">
+      <div class="card text-center p-3 cartica">
         <h6 class="fw-bold">Productos</h6>
-        <p class="fs-5">35</p>
+        <img src="assets/logo.png" alt="" class="imagen">
+     
+       
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card text-center p-3">
+      <div class="card text-center p-3 cartica">
         <h6 class="fw-bold">Proveedores</h6>
-        <p class="fs-5">5</p>
+        <img src="assets/proveedor.png" alt="" class="imagen">
       </div>
     </div>
   </div>
@@ -40,15 +44,16 @@
             <app-card></app-card>
 
           </div>
+          
         </div>
       </div>
     </div>
 
     <!-- Producto más vendido -->
     <div class="col-md-3">
-      <div class="card text-center p-3 h-100">
-        <h6 class="fw-bold">Producto más Vendido</h6>
-        <p class="mt-3">[Aquí puedes mostrar el nombre o imagen del producto]</p>
+      <div class="card text-center p-3 h-100 cartica ">
+        <h6 class="fw-bold">Hola, bienvenido a mi Tienda</h6>
+        <img src="assets/saludo.png" alt="" class="imagen">
       </div>
     </div>
   </div>
