--- a/Frontend/CrudJavaTienda/src/app/pages/ProductosPage/producto/producto.component.html
+++ b/Frontend/CrudJavaTienda/src/app/pages/ProductosPage/producto/producto.component.html
@@ -1,12 +1,22 @@
 <div class="container mt-4">
     <!-- Encabezado y botón para agregar -->
     <div class="d-flex justify-content-between align-items-center mb-3">
-      <h4>Productos</h4>
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCrearProducto">
+      <div class="d-flex align-items-center gap-3">
+        <h4>Productos</h4>
+        <!-- Añadimos el selector de categorías -->
+        <select class="form-select form-select-sm" style="width: auto;" [(ngModel)]="categoriaSeleccionada" (change)="filtrarProductos()">
+          <option value="0">Todas las categorías</option>
+          <option *ngFor="let categoria of categorias" [value]="categoria.categoryId">
+            {{ categoria.name }}
+          </option>
+        </select>
+      </div>
+      <button *ngIf="esAdmin" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCrearProducto">
         Agregar Productos
       </button>
     </div>
   
+    
     <!-- Modal Crear -->
     <div class="modal fade" id="modalCrearProducto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
