--- a/Frontend/CrudJavaTienda/src/app/pages/proveedoresPage/proveedor/proveedor.component.html
+++ b/Frontend/CrudJavaTienda/src/app/pages/proveedoresPage/proveedor/proveedor.component.html
@@ -2,7 +2,7 @@
     <!-- Encabezado y botón para agregar -->
     <div class="d-flex justify-content-between align-items-center mb-3">
       <h4>Proveedores</h4>
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCrearProveedor">
+      <button *ngIf="esAdmin" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCrearProveedor">
         Agregar Proveedor
       </button>
     </div>
