--- a/Frontend/CrudJavaTienda/src/app/sidenav/sidenav.component.html
+++ b/Frontend/CrudJavaTienda/src/app/sidenav/sidenav.component.html
@@ -12,6 +12,7 @@
       <app-option-button [ruta]="'/categoria'" [texto]="'Categoria'"></app-option-button>
       <app-option-button [ruta]="'/productos'" [texto]="'Productos'"></app-option-button>
       <app-option-button [ruta]="'/proveedores'" [texto]="'Proveedores'"></app-option-button>
+      <app-option-button [ruta]="'/facturas'" [texto]="'Facturas'"></app-option-button>
      
 
     </ul>
