--- a/Frontend/CrudJavaTienda/src/app/pages/proveedoresPage/componentes/tarjeta-proveedor/tarjeta-proveedor.component.html
+++ b/Frontend/CrudJavaTienda/src/app/pages/proveedoresPage/componentes/tarjeta-proveedor/tarjeta-proveedor.component.html
@@ -9,7 +9,7 @@
       <button class="btn btn-sm btn-outline-primary mt-2"
       *ngIf="esAdmin" 
       data-bs-toggle="modal"
-      data-bs-target="#modalEditarProducto"
+      data-bs-target="#modalEditarProveedor"
       (click)="onEditar3()">
  Editar
 </button>
