--- a/Frontend/CrudJavaTienda/src/app/pages/proveedoresPage/proveedor/proveedor.component.html
+++ b/Frontend/CrudJavaTienda/src/app/pages/proveedoresPage/proveedor/proveedor.component.html
@@ -58,7 +58,14 @@
                 (ProveedorActualizado)="recargarProveedorsYCerrarModal()">
             
             </app-Proveedor-editar> -->
-            <h1>hi</h1>
+
+            <app-proveedor-editar
+            *ngIf="proveedorrSeleccionada"
+            [Proveedor]="proveedorrSeleccionada"
+            (ProveedorActualizado)="recargarProveedorYCerrarModal()"
+            
+            ></app-proveedor-editar>
+         
         
       
         </div>
