--- a/Frontend/CrudJavaTienda/src/app/sidenav/sidenav.component.html
+++ b/Frontend/CrudJavaTienda/src/app/sidenav/sidenav.component.html
@@ -3,7 +3,7 @@
 
   <!-- Sidebar fija -->
   <div class=" text-white p-3 fondoSidenav" style="width: 250px; min-height: 100vh;">
-    <h4>Model Secutiry</h4>
+    <h4>Tienda Don Pedro</h4>
     <hr>
     <ul class="nav nav-pills flex-column">
 
